[tool.poetry]
name = "st-cli"
version = "0.1.0"
description = ""
authors = ["gldnrt <19574992+gldnrt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "st_cli"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
