[tool.poetry]
name = "st-cli"
version = "0.1.0"
description = "Bitcoinの署名済み送金用トランザクションを作成するCLIアプリケーション"
authors = ["gldnrt <19574992+gldnrt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "st_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.17.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
